--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.16.0",
+    "husky": "^8.0.1",
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
@@ -11,7 +15,9 @@
   "scripts": {
     "start": "ts-node src/main --inspect",
     "start:dev": "nodemon --inspect=0.0.0.0 --watch \"src/**\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/main\" | pino-pretty -c -t",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/eslint ./",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
