feat: mongoose implementation

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ REDIS_PORT=6379
 REDIS_HOST=localhost
 REDIS_PASSWORD=redis
 REDIS_DATABASE=1
+MONGO_PORT=27017
+MONGO_HOST=localhost
+MONGO_USERNAME=root
+MONGO_PASSWORD=example
+MONGO_DATABASE=money-control
