--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon --watch \"src/**\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/main\"",
+    "start:dev": "nodemon --watch \"src/**\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/main\" | pino-pretty -c -t",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,7 +28,9 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "ioredis": "^5.0.5",
+    "mongoose": "^6.3.3",
     "pino": "^7.11.0",
+    "pino-pretty": "^7.6.1",
     "reflect-metadata": "^0.1.13",
     "telegraf": "^4.8.2"
   }
