--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "ioredis": "^5.0.5",
+    "moment": "^2.29.4",
     "mongoose": "^6.3.3",
     "pino": "^7.11.0",
     "pino-pretty": "^7.6.1",
