--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start:prod": "node dist/main",
+    "build": "rimraf dist && tsc -b",
     "start": "ts-node src/main --inspect",
     "start:dev": "nodemon --inspect=0.0.0.0 --watch \"src/**\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/main\" | pino-pretty -c -t",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -40,6 +42,7 @@
     "pino": "^7.11.0",
     "pino-pretty": "^7.6.1",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
     "telegraf": "^4.8.2"
   }
 }
