--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "eslint": "^8.16.0",
     "husky": "^8.0.1",
     "nodemon": "^2.0.16",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "ts-node": "^10.7.0"
   },
   "name": "money-control-telegram",
   "description": "",
@@ -44,6 +43,6 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "telegraf": "^4.8.2",
-    "tsc": "^2.0.4"
+    "typescript": "^4.7.4"
   }
 }
