--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.7",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "eslint": "^8.16.0",
     "husky": "^8.0.1",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.16",
-    "ts-node": "^10.7.0"
+    "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.1"
   },
   "name": "money-control-telegram",
   "description": "",
@@ -16,7 +23,7 @@
     "build": "rimraf dist && tsc -b",
     "start": "ts-node src/main --inspect",
     "start:dev": "nodemon --inspect=0.0.0.0 --watch \"src/**\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/main\" | pino-pretty -c -t",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "./node_modules/.bin/eslint ./",
     "prepare": "husky install"
   },
